<resources>
    <string name="app_name">Firebase App</string>
    <string name="login">Login</string>
    <string name="Register">register</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="login_successful">Login Successful</string>
    <string name="logout">Logout</string>
    <string name="main_description">First Register then Login the app !!</string>
    <string name="login_message">Thank you for registering, please do Login</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="add_name">Add Name</string>
    <string name="enterMarksTxt">Enter your marks out of 100</string>
    <string name="add_Details">Add Details</string>
    <string name="profile_image_register_activity">profile image of register activity</string>
    <string name="loginApp">Login App</string>
</resources>