<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/main_background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="272dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:contextClickable="true"
        android:elegantTextHeight="true"
        android:freezesText="true"
        android:text="@string/login_successful"
        android:textColor="#2C292C"
        android:textColorHighlight="#F8F8F8"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555"
        tools:ignore="TextSizeCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/main_logout"
        android:layout_width="199dp"
        android:layout_height="65dp"
        android:text="@string/logout"
        android:textSize="25sp"
        app:iconSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/main_name_field"
        android:layout_width="308dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/main_addDetails"
        android:layout_width="174dp"
        android:layout_height="51dp"
        android:text="@string/add_Details"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_name_field"
        app:layout_constraintVertical_bias="0.625" />

    <EditText
        android:id="@+id/main_Marks_field"
        android:layout_width="317dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/enterMarksTxt"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/main_addDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_name_field"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>