<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity">

    <Button
        android:id="@+id/login_loginButton"
        android:layout_width="379dp"
        android:layout_height="63dp"
        android:text="@string/login_button"
        android:textSize="31sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713" />

    <EditText
        android:id="@+id/login_editTextTextPassword"
        android:layout_width="339dp"
        android:layout_height="63dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#E91E63"
        app:layout_constraintBottom_toTopOf="@+id/login_loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/login_editTextTextEmailAddress"
        android:layout_width="331dp"
        android:layout_height="63dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#E91E63"
        app:layout_constraintBottom_toTopOf="@+id/login_editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_textField"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/login_textField"
        android:layout_width="291dp"
        android:layout_height="63dp"
        android:contextClickable="true"
        android:elegantTextHeight="true"
        android:text="@string/login_message"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textDirection="locale"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/login_editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>